tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bool_numeric_generic/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: N has a type of bool. The only supported numeric generic types are `u1`, `u8`, `u16`, and `u32`.
  ┌─ src/main.nr:2:21
  │
2 │     pub fn read<let N: bool>() -> Field {
  │                     - Unsupported numeric generic type
  │

Aborting due to 1 previous error
