tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bool_numeric_generic/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: N has a type of bool. The only supported numeric generic types are `u1`, `u8`, `u16`, and `u32`.
  ┌─ src/main.nr:2:21
  │
2 │     pub fn read<let N: bool>() -> Field {
  │                     - Unsupported numeric generic type
  │

Aborting due to 1 previous error
